[package]
name = "experience"
version = "0.0.1"
authors = [
    "Micha Vie <micha@peerme.io>",
    "PeerMe <hello@peerme.io>",
]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"

[dependencies.multiversx-sc]
version = "0.57.1"
